//// -- LEVEL 1
//// -- Tables and References
// Creating tables

// https://dbdiagram.io/d/6073abcbecb54e10c33fc45b
Project byte_web_monitor {
  database_type: 'Tablestore'
  Note: '''
  '''
}

Table device {
  uid String pk [note:'选择']
  app_id String
  device_type String
  OS String
  OS_version INTEGER
  screen_height String
  screen_width String
  network String
  orientation String [note:'横屏竖屏']
  language String
  browser_info String
  url_path String

  user_id String [note:'发出该消息的用户标识']
  time timestamp [note:'消息生成的时刻']
}

Table performance {
  uid String pk 
  app_id String
  url String [note:'性能测试的url']
  redirect_time INTEGER [note:'重定向时间']
  dns_time INTEGER [note:'DNS查询时间']
  ttfb_time INTEGER [note:'开始读取内容时间']
  req_time INTEGER [note:'内容加载完成时间']
  load_page_time INTEGER  [note:'总时间']

  user_id String [note:'发出该消息的用户标识']
  time timestamp [note:'消息生成的时刻']
}

Table error {
  uid String pk 
  app_id String
  url String
  type String [note:'错误类型']

  error_info String [note:'错误信息'] 
  error_url String [note:'错误源']
  error_row INTEGER [note:'代码行号(如果有)若没有提交0']
  error_col INTEGER [note:'代码列号(如果有)若没有提交0']
  error_extra String [note:'关于错误的额外补充信息(可能有)']

  user_id String [note:'发出该消息的用户标识']
  time timestamp [note:'消息生成的时刻']
}


Table app {
  _id String pk
  admin_name String [note: '管理员账号']
  app_id String [note: '应用id']
  app_name String [note: '应用名称']
  app_desc String [note: '关于应用的详细描述']
}


Table admin {
  uid String pk
  admin_name String
  admin_passwd String
  mobile String
}

Ref: admin.admin_name > app.admin_name
Ref: app.app_id > device.app_id
Ref: app.app_id > performance.app_id
Ref: app.app_id > error.app_id







